--- a/ex04/dlcv_04.tex
+++ b/ex04/dlcv_04.tex
@@ -18,15 +18,26 @@
 		\begin{exercise}[p=20]{Transposed Convolutions}
 		\question{}
 		{
-			
+			One possible solution is:\\
+			$x1=17, x2=15\\ x3=3, x4=2\\ x5=15, x6=13\\ x7=2, x8=6$
 		}
+		\question{}{}
+		\begin{verbatim}
+		
+		
+			W3 = tf.Variable(tf.zeros([3,3,15,13]))
+			layer3 = tf.nn.conv2d_transpose(layer2, W3, output_shape=tf.constant(np.array([-1,22,24,15],
+			dtype=np.int32)), strides=[1,2,6,1], padding = 'SAME')
+			W4 = tf.Variable(tf.zeros([3,3,17,15]))
+			layer4 = tf.nn.conv2d_transpose(layer3, W4, output_shape=tf.constant(np.array([-1,64,48,17],
+			dtype=np.int32)), strides=[1,3,2,1], padding = 'SAME')
+			layer4.shape
+			TensorShape([Dimension(None), Dimension(64), Dimension(48), Dimension(17)])
+		\end{verbatim}	
+		
 		\question{}
 		{
-			
-		}
-		\question{}
-		{
-			
+			It's not clear how much padding was used in the convolution, so output shape needs to be specified in the method.
 		}
 		\end{exercise}
 		
